--- a/OnlineRadio.GUI/OnlineRadio.GUI.csproj
+++ b/OnlineRadio.GUI/OnlineRadio.GUI.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <AssemblyTitle>OnlineRadio.GUI</AssemblyTitle>
     <Product>OnlineRadio.GUI</Product>
