--- a/OnlineRadio.Plugins.Audio/OnlineRadio.Plugins.Audio.csproj
+++ b/OnlineRadio.Plugins.Audio/OnlineRadio.Plugins.Audio.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <ProductVersion>8.0.30703</ProductVersion>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <AssemblyTitle>OnlineRadio.Plugins.Audio</AssemblyTitle>
     <Product>OnlineRadio.Plugins.Audio</Product>
     <Copyright>Copyright ©  2012</Copyright>
