--- a/OnlineRadio.GUI/App.config
+++ b/OnlineRadio.GUI/App.config
@@ -1,3 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="OnlineRadio.GUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <userSettings>
+        <OnlineRadio.GUI.Properties.Settings>
+            <setting name="Volume" serializeAs="String">
+                <value>0.2</value>
+            </setting>
+        </OnlineRadio.GUI.Properties.Settings>
+    </userSettings>
 </configuration>
